<resources>
    <string name="app_name">Instagram</string>
    <string name="instagram">Instagram</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_you_have_any_account_yet">Don\'t you have any account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_a_caption">Write a caption</string>
    <string name="follow">Follow</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="following">Following…</string>
    <string name="title">title</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="caption">Caption</string>
</resources>