<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_main_gradient"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/custom_font"
                android:text="@string/instagram"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/sign_up_fullname_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/view_rounded_corner"
                android:hint="@string/fullname"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="#90ffffff"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/sign_up_email_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/view_rounded_corner"
                android:hint="@string/email"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="#90ffffff"
                android:textSize="16sp"
                android:textStyle="normal" />


            <EditText
                android:id="@+id/sign_up_password_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/view_rounded_corner"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="#90ffffff"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/sign_up_confirm_password_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/view_rounded_corner"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="#90ffffff"
                android:textSize="16sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up_button_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/view_rounded_corner"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sign_up_button_sign_in_id"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:gravity="center_vertical"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_circular_sign_up_id"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:indeterminateTint="#000000" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>